# reachy-mini-receptionist

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  tmp-ported-live-test-gaps.md
docs/: custom-realtime-backend-research.md  data-harness.md  head-pose-calibration-notes.md  hf-s2s-m1max-backend.md  legacy-cleanup-plan.md  live-test-log.md  ops-design.md  ops-impl-review.md  plan-official-runtime-refactor.md  robot-guide.md  robot-runtime-debugging.md  runbook.md  todo-official-runtime.md  voice-ai-research.md
docs/archive/: README.md
docs/archive/legacy/: README.md  brain-backend-research.md  continuous-listen.md  plan-reception.md  plan.md  progress.md
docs/archive/research/: README.md  plan-livekit-backend.md
docs/archive/reviews/: README.md  ops-impl-review.md  ops-test-todos.md
experiments/: stream_speak_test.py  vad_endpoint_test.py
experiments/agentic_api/: README.md  benchmark_responses_latency.py
experiments/agentic_api/scenarios/: clinic_reception_26_turns.json  clinic_smoke.json
experiments/brain_bench/: bench.py  decompose.py  model_sweep.py  reasoning_sweep.py  rigorous_bench.py  show_two.py  test_pydantic_brain.py
profiles/clinic_receptionist/: instructions.txt  tools.txt  voice.txt
scripts/m1max/: live_ops.sh  mark.py  run_official_runtime_live.sh  run_s2s_backend.sh
src/reachy_mini_brain/: alert_engine.py  approach.py  audio.py  audio_pacing.py  brain.py  clinic_facts.md  detector.py  gesture.py  motion.py  perception.py  reception.py  replay.py  review_audio.py  robot.py  session.py  state.py  stt.py  stt_worker.py  transcribe.py  tts.py  video.py  vision.py
src/reachy_mini_brain/official_runtime/: __init__.py  artifacts.py  benchmark_backends.py  camera.py  capabilities.py  conversation_cues.py  env.py  events.py  hf_official.py  live_app.py  livekit_agent.py  livekit_handler.py  livekit_room_bridge.py  moves.py  ops_cli.py  ops_core.py  perception.py  playback_probe.py  policies.py  policy_audio_cache.py  reception.py  replay_livekit.py  replay_vision.py  robot_io.py  s2s_realtime.py  stream_runtime.py  wav_replay.py
tests/: test_antenna_manual.py  test_audio_pacing.py  test_e2e.py  test_e2e_audio.py  test_e2e_vision.py  test_integration.py  test_official_runtime.py  test_ops_management.py  test_reception_manifest.py
